feat: Add comprehensive error handling, logging, and caching infrastructure
This major refactoring introduces a robust foundation for production-ready comic translation application with the following key improvements:

## 🚀 New Features

### Exception Handling System (modules/utils/exceptions.py)
- Comprehensive exception hierarchy with standardized error codes (CT_0000-CT_6005)
- Context-aware error reporting with user-friendly messages
- Error severity levels (WARNING, ERROR, CRITICAL)
- Specialized exceptions for each module (DetectionError, OCRError, TranslationError, etc.)
- Exception chaining and context preservation
- Error reporting utilities for debugging and user feedback

### Advanced Logging System (modules/utils/logging_config.py)
- Structured logging using loguru with JSON format support
- Context-aware logging with component and operation tracking
- Performance monitoring with metrics collection
- Thread-safe contextual logging
- Log analysis utilities for error tracking and performance analysis
- Configurable log levels, rotation, and retention policies

### Thread-Safe Caching (modules/utils/cache.py)
- ThreadSafeLRUCache with size bounds and TTL support
- PersistentCache with msgpack serialization for cross-session persistence
- CacheManager for centralized cache coordination
- Memory monitoring and pressure detection
- Cache decorators for easy function result caching
- Comprehensive cache statistics and monitoring

### Project Packaging (setup.py)
- Proper Python package structure with entry points
- Optional dependency groups (gpu, ocr-chinese, llm-translation, cloud-services)
- Development tools configuration (pytest, ruff, mypy, black)
- PyPI-ready metadata and classifiers
- Console and GUI script entry points

### CI/CD Pipeline (.github/workflows/ci.yml)
- Multi-platform testing matrix (Ubuntu, Windows, macOS)
- Code quality checks (ruff, mypy, bandit, safety)
- Dependency vulnerability scanning
- Coverage reporting with Codecov integration


--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,24 @@
-opencv_python
-setuptools
-PySide6>=6.8.0
-dayu-path>=0.5.2
-msgpack>=1.1.0
-requests>=2.31.0
-pdfplumber>=0.11.5
-torch>=2.6.0
-torchvision>=0.21.0
-py7zr>=0.20.8
-rarfile>=4.1
-img2pdf>=0.5.1
-python-doctr[torch]>=0.11.0
-azure-ai-vision-imageanalysis>=1.0.0b1
-deepl>=1.16.1
-deep-translator>=1.11.4
-stanza>=1.7.0
-jaconv>=0.3.4
-transformers>=4.49.0
-wget>=3.2
-largestinteriorrectangle>=0.2.0
-paddleocr>=2.8.1
-paddlepaddle>=2.6.1
-loguru>=0.7.2
-fugashi>=1.4.0
-pyperclip>=1.9.0
-unidic-lite>=1.0.8
+# requirements.txt - core dependencies for Comic Translate MT
+#
+# This file contains only the core dependencies required for basic functionality.
+# Optional features (GPU support, OCR Chinese, LLM translation, cloud services) are
+# available as extras. Install them using:
+#   pip install .[gpu]
+#   pip install .[ocr-chinese]
+#   pip install .[llm-translation]
+#   pip install .[cloud-services]
+#   pip install .[all]
+
+PySide6>=6.8.0,<7.0.0
+opencv-python>=4.8.0,<5.0.0
+requests>=2.31.0,<3.0.0
+msgpack>=1.1.0,<2.0.0
+pdfplumber>=0.11.5,<1.0.0
+py7zr>=0.20.8,<1.0.0
+rarfile>=4.1,<5.0.0
+img2pdf>=0.5.1,<1.0.0
+wget>=3.2,<4.0.0
+loguru>=0.7.2,<1.0.0
+pyperclip>=1.9.0,<2.0.0
+dayu-path>=0.5.2,<1.0.0
+largestinteriorrectangle>=0.2.0,<1.0.0
